[project]
name = "pyrefly-torch-shape-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrefly>=1.1.0.dev2",
    "torch>=2.12.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
# Assumes you've checked out pyrefly to ./_pyrefly ... this
# adds the shape_extensions and shap-aware torch-stubs
search-path = [
    "_pyrefly/tensor-shapes/",
]
