[project]
name = "pyrefly-torch-shape-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # The tensor-shape stub API is experimental and unstable, so the
    # pyrefly and pyrefly-torch-stubs versions must be kept in lockstep.
    # A given release pair may happen to be compatible across adjacent
    # versions, but there is no expectation of stability.
    "pyrefly==1.1.1",
    "pyrefly-torch-stubs==1.1.1",
    "torch>=2.12.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
# The shape-aware torch stubs and shape_extensions are provided by the
# pyrefly-torch-stubs package (which pulls in pyrefly-shape-extensions).
# They install into site-packages, which Pyrefly searches by default, so
# no extra search-path is needed.
